<resources>
    <string name="app_name">Grocery List</string>
    <string name="name_label">Name</string>
    <string name="quantity_label">Quantity</string>
    <string name="description_label">Description</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string-array name="groceries">
        <item>Walnuts</item>
        <item>Cheese</item>
        <item>Milk</item>
        <item>Bread</item>
        <item>
            Extra long specific string with wild wild expectations. Someone must have
            some extreme preferences if a grocery item ever really got this long.
        </item>
        <item>Pudding</item>
        <item>Bacon</item>
        <item>Apple</item>
        <item>Banana</item>
        <item>Orange Juice</item>
        <item>Nuts</item>
        <item>Pommegranite</item>
        <item>Twix</item>
        <item>Yogurt</item>
        <item>Beer</item>
        <item>Mountain Dew</item>
        <item>Peanut Butter</item>
        <item>Gatorade</item>
        <item>Butter</item>
        <item>Spaghetti</item>
        <item>Spaghetti Sauce</item>
    </string-array>
</resources>
